Added button to open input fields

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <!-- Button to open nav -->
+    <div class="burger">
+        <div id="line1"></div>
+        <div id="line2"></div>
+        <div id="line3"></div>
+    </div>
+
     <!-- Input Fields -->
     <nav>
         <div class="inputGoals">
@@ -19,6 +26,9 @@
         <div class="depositAmount">
             <input type="number" id="savingsDeposit" placeholder="Deposit">
             <button id="depositSubmit">Submit</button>
+                <div class="totalDeposit">
+                    <p><span id="navDeposit"></span> / <span id="navTotal"></span></p>
+                </div>
         </div>
     </nav>
 
