Added a button to clear storage

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 
 		<!-- Input Fields -->
 		<nav>
+			<div class="clearBtn">
+				<button id="clearStorage" class="btn">New Goal</button>
+			</div>
 			<div class="inputGoals">
 				<input type="text" id="saving" class="input" placeholder="What are you saving for?">
 				<input type="number" id="savingsAmount" class="input" placeholder="What is your goal?"><br>
