--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <title>Savings Countdown</title>
 </head>
 <body>
@@ -42,6 +43,9 @@
 						<p id="navAmount"><span id="navDeposit">$0</span> / <span id="navTotal">$0</span></p>
 					</div>
 			</div>
+			<div>
+				<a href="settings.html"><i class="fas fa-cog settingsBtn"></i></a>
+			</div>
 		</nav>
 
         <!-- Display Progress -->
@@ -53,6 +57,7 @@
 
     </div>
 
+	<!-- Javascript -->
     <script src="logic.js"></script>
 </body>
 </html>
