--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 						</div>
 				</section>
 
+			<!-- Change background from light to dark -->
 				<section class="dark-mode">
 					<p>Dark mode</p>
 
