--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               class="input settings-color"
               placeholder="Deposit"
             /><br />
-            <button id="depositSubmit" class="nav__btn">Submit</button>
+            <button id="deposit-submit" class="nav__btn">Submit</button>
             <div class="nav__total-deposit">
               <p id="navAmount">
                 <span id="navDeposit">$0</span> / <span id="navTotal">$0</span>
@@ -71,70 +71,81 @@
 
         <!-- Settings Button -->
         <div>
-          <i class="fas fa-cog settingsBtn settingsJS"></i>
+          <i class="fas fa-cog nav__settings-btn settingsJS"></i>
         </div>
       </nav>
 
       <!-- Display Progress -->
       <div class="display">
-        <p class="savingItem"></p>
-        <p class="savingAmount"></p>
+        <p class="display__saving-item"></p>
+        <p class="display__saving-amount"></p>
       </div>
 
       <!-- Modal on goal completion -->
-      <div class="modal-completion">
-        <div class="close-modal">
-          <i class="far fa-times-circle close-modal-btn"></i>
-        </div>
-
-        <div class="modal-display">
+      <div class="modal">
+        <div class="modal__display">
+          <div class="modal__display--close">
+            <i class="far fa-times-circle modal__display--close-btn"></i>
+          </div>
           <p>Congratulations! you completed your goal!</p>
         </div>
       </div>
 
       <!-- Settings -->
-      <div class="settings-container settings-color">
-        <!-- Header -->
-        <header class="settings-title">
+      <div class="settings settings-color">
+        <!-- was settings-container -->
+        <header class="settings__header">
           <!-- Back Button -->
-          <div class="btn-container">
-            <i class="fas fa-arrow-left back-btn settingsJS"></i>
+          <div class="settings__btn">
+            <i class="fas fa-arrow-left settings__btn--back settingsJS"></i>
           </div>
 
-          <p class="title">Settings</p>
+          <p class="settings__title">Settings</p>
         </header>
 
         <!-- Change Background Image -->
-        <section class="change-bkg">
+        <section class="settings__change-bkg">
           <p>Change background image</p>
 
-          <div class="images">
-            <div id="bkg-1" class="background-img"></div>
-            <div id="bkg-2" class="background-img"></div>
-            <div id="bkg-3" class="background-img"></div>
-            <div id="bkg-4" class="background-img"></div>
-            <div id="bkg-5" class="background-img"></div>
-            <div id="bkg-6" class="background-img"></div>
+          <div class="settings__images">
+            <div id="bkg-1" class="settings__images--img">
+              <img src="/img/bkg-1.jpeg" alt="img1" />
+            </div>
+            <div id="bkg-2" class="settings__images--img">
+              <img src="/img/bkg-2.jpeg" alt="img2" />
+            </div>
+            <div id="bkg-3" class="settings__images--img">
+              <img src="/img/bkg-3.jpeg" alt="img3" />
+            </div>
+            <div id="bkg-4" class="settings__images--img">
+              <img src="/img/bkg-4.jpeg" alt="img4" />
+            </div>
+            <div id="bkg-5" class="settings__images--img">
+              <img src="/img/bkg-5.jpeg" alt="img5" />
+            </div>
+            <div id="bkg-6" class="settings__images--img">
+              <img src="/img/bkg-6.jpeg" alt="img6" />
+            </div>
           </div>
         </section>
 
         <!-- Change Font Size -->
-        <section class="change-fontsize">
+        <section class="settings__change-fontsize">
           <p>Change font size</p>
 
-          <div class="fontsize">
-            <div id="f1" class="size">Aa</div>
-            <div id="f2" class="size">Aa</div>
-            <div id="f3" class="size">Aa</div>
+          <div class="settings__fontsize">
+            <div class="settings__fontsize--f1">Aa</div>
+            <div class="settings__fontsize--f2">Aa</div>
+            <div class="settings__fontsize--f3">Aa</div>
           </div>
         </section>
 
         <!-- Change background from light to dark -->
-        <section class="dark-mode">
+        <section class="settings__dark-mode">
           <p>Dark mode</p>
 
-          <div class="dark-mode-container settings-color">
-            <div class="dark-mode-btn settings-color"></div>
+          <div class="settings__dark-mode--container settings-color">
+            <div class="settings__dark-mode--btn settings-color"></div>
           </div>
         </section>
       </div>
