--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="nav__clear-btn">
             <button id="clear-storage" class="nav__btn">New Goal</button>
           </div>
-          <div class="nav__input-goals">
+          <form class="nav__input-goals">
             <input
               type="text"
               id="saving"
@@ -51,9 +51,9 @@
               placeholder="What is your goal?"
             /><br />
             <button id="savingDescription" class="nav__btn">Submit</button>
-          </div>
+          </form>
 
-          <div class="nav__deposit-amount">
+          <form class="nav__deposit-amount">
             <input
               type="number"
               id="savingsDeposit"
@@ -66,7 +66,7 @@
                 <span id="navDeposit">$0</span> / <span id="navTotal">$0</span>
               </p>
             </div>
-          </div>
+          </form>
         </div>
 
         <!-- Settings Button -->
