fixed some styles and refactoring js code

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               class="input settings-color"
               placeholder="What is your goal?"
             /><br />
-            <button id="savingDescription" class="nav__btn">Submit</button>
+            <button class="nav__btn">Submit</button>
           </form>
 
           <form class="nav__deposit-amount">
@@ -60,7 +60,7 @@
               class="input settings-color"
               placeholder="Deposit"
             /><br />
-            <button id="deposit-submit" class="nav__btn">Submit</button>
+            <button class="nav__btn">Submit</button>
             <div class="nav__total-deposit">
               <p id="navAmount">
                 <span id="navDeposit">$0</span> / <span id="navTotal">$0</span>
@@ -71,7 +71,7 @@
 
         <!-- Settings Button -->
         <div>
-          <i class="fas fa-cog nav__settings-btn settingsJS"></i>
+          <i class="fas fa-cog nav__settings-btn settings-btn"></i>
         </div>
       </nav>
 
@@ -97,7 +97,7 @@
         <header class="settings__header">
           <!-- Back Button -->
           <div class="settings__btn">
-            <i class="fas fa-arrow-left settings__btn--back settingsJS"></i>
+            <i class="fas fa-arrow-left settings__btn--back settings-btn"></i>
           </div>
 
           <p class="settings__title">Settings</p>
@@ -109,22 +109,22 @@
 
           <div class="settings__images">
             <div id="bkg-1" class="settings__images--img">
-              <img src="/img/bkg-1.jpeg" alt="img1" />
+              <img src="/img/bkg-1.jpeg" alt="img1" class="img" />
             </div>
             <div id="bkg-2" class="settings__images--img">
-              <img src="/img/bkg-2.jpeg" alt="img2" />
+              <img src="/img/bkg-2.jpeg" alt="img2" class="img" />
             </div>
             <div id="bkg-3" class="settings__images--img">
-              <img src="/img/bkg-3.jpeg" alt="img3" />
+              <img src="/img/bkg-3.jpeg" alt="img3" class="img" />
             </div>
             <div id="bkg-4" class="settings__images--img">
-              <img src="/img/bkg-4.jpeg" alt="img4" />
+              <img src="/img/bkg-4.jpeg" alt="img4" class="img" />
             </div>
             <div id="bkg-5" class="settings__images--img">
-              <img src="/img/bkg-5.jpeg" alt="img5" />
+              <img src="/img/bkg-5.jpeg" alt="img5" class="img" />
             </div>
             <div id="bkg-6" class="settings__images--img">
-              <img src="/img/bkg-6.jpeg" alt="img6" />
+              <img src="/img/bkg-6.jpeg" alt="img6" class="img" />
             </div>
           </div>
         </section>
@@ -134,9 +134,9 @@
           <p>Change font size</p>
 
           <div class="settings__fontsize">
-            <div class="settings__fontsize--f1">Aa</div>
-            <div class="settings__fontsize--f2">Aa</div>
-            <div class="settings__fontsize--f3">Aa</div>
+            <div class="settings__fontsize--f1 size">Aa</div>
+            <div class="settings__fontsize--f2 size">Aa</div>
+            <div class="settings__fontsize--f3 size">Aa</div>
           </div>
         </section>
 
