fixed display bug upon first loading the webpage

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               id="savingsAmount"
               class="input settings-color"
               placeholder="What is your goal?"
-              autocomplete="off"
+              step="any"
             /><br />
             <button class="nav__btn">Submit</button>
           </form>
@@ -61,7 +61,7 @@
               id="savingsDeposit"
               class="input settings-color"
               placeholder="Deposit"
-              autocomplete="off"
+              step="any"
             /><br />
             <button class="nav__btn">Submit</button>
             <div class="nav__total-deposit">
@@ -137,9 +137,9 @@
           <p>Change font size</p>
 
           <div class="settings__fontsize">
-            <div class="settings__fontsize--f1 size">Aa</div>
-            <div class="settings__fontsize--f2 size">Aa</div>
-            <div class="settings__fontsize--f3 size">Aa</div>
+            <div id="f1" class="settings__fontsize--f1 size">Aa</div>
+            <div id="f2" class="settings__fontsize--f2 size">Aa</div>
+            <div id="f3" class="settings__fontsize--f3 size">Aa</div>
           </div>
         </section>
 
